--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,20 @@ footer {
   width: 640px;
   height: 480px;
 }
+/* #interactive.viewport {
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+}
 
+
+#interactive.viewport canvas, video {
+  float: left;
+  width: 100%;
+  height: 100%;
+} */
 #interactive.viewport canvas.drawingBuffer, video.drawingBuffer {
   margin-left: -640px;
 }
