--- a/css/styles.css
+++ b/css/styles.css
@@ -76,7 +76,7 @@ footer {
 #interactive.viewport canvas, video {
   float: left;
   width: 100%;
-  height: 100%;
+  height: auto;
 }
 #interactive.viewport canvas.drawingBuffer, video.drawingBuffer {
   margin-left: -640px;
