--- a/css/styles.css
+++ b/css/styles.css
@@ -57,13 +57,24 @@ footer {
   width: 640px;
   height: 480px;
 } */
-#interactive.viewport {
-  position: absolute;
-  top:0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
+
+
+@media (min-width: 603px){
+
+  #interactive.viewport {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+  }
+  #interactive.viewport canvas, video {
+    float: left;
+    width: 100%;
+    height: auto;
+  }
 }
+
 
 .stop{
   position: absolute;
@@ -73,11 +84,7 @@ footer {
 }
 
 
-#interactive.viewport canvas, video {
-  float: left;
-  width: 100%;
-  height: auto;
-}
+
 #interactive.viewport canvas.drawingBuffer, video.drawingBuffer {
   margin-left: -640px;
 }
@@ -250,13 +257,6 @@ i.icon-24-scan {
       max-width: calc(50% - 2px);
   }
 
-  #interactive.viewport {
-    width: 100%;
-    height: auto;
-    overflow: hidden;
-  }
-
-
   #interactive.viewport canvas, video {
     width: 100%;
     height: auto;
@@ -288,30 +288,14 @@ i.icon-24-scan {
     height: 180px;
   }
 }
-@media (max-width: 603px) {
-
-  .overlay.scanner {
-    width: 100%;
-    height: auto;
-    padding: 20px;
-    margin-top: -275px;
-    margin-left: -340px;
-    background-color: #FFF;
-    -moz-box-shadow: none;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-  }
-
-  .overlay.scanner > .header {
-    margin-bottom: 14px;
-  }
-
-  .overlay.scanner > .header h4, .overlay.scanner > .header .close {
-    line-height: 16px;
-  }
-
-  .overlay.scanner > .header .close {
-    height: 16px;
-    width: 16px;
+@media all and (orientation: portrait) and (max-width: 603px) {
+  #interactive {
+    transform: rotate(-90deg);
+    transform-origin: left top;
+    width: 100vh;
+    overflow-x: hidden;
+    position: absolute;
+    top: 100%;
+    left: 0;
   }
 }
