--- a/css/styles.css
+++ b/css/styles.css
@@ -291,32 +291,29 @@ i.icon-24-scan {
 /* This used to work for the parent element of button divs */
 /* But it does not work with newer browsers, the below doesn't hide the play button parent div */
 
-*::-webkit-media-controls-panel {
+/* *::-webkit-media-controls-panel {
   display: none!important;
   -webkit-appearance: none;
 }
 
 /* Old shadow dom for play button */
 
-*::-webkit-media-controls-play-button {
+/* *::-webkit-media-controls-play-button {
   display: none!important;
   -webkit-appearance: none;
-}
-::-webkit-media-controls {
+} */
+/* ::-webkit-media-controls {
   display:none !important;
-}
+} */
 /* New shadow dom for play button */
 
 /* This one works! */
 
-*::-webkit-media-controls-start-playback-button {
+/* *::-webkit-media-controls-start-playback-button {
   display: none!important;
   -webkit-appearance: none;
-}
+} */
 
-video::-webkit-media-controls {
-  display:none !important;
-}
 /* @media all and (orientation: portrait) and (max-width: 603px) {
   #interactive {
     transform: rotate(-90deg);
