--- a/css/styles.css
+++ b/css/styles.css
@@ -293,12 +293,9 @@ i.icon-24-scan {
   display: none!important;
   -webkit-appearance: none;
 }
-/* ::-webkit-media-controls {
+::-webkit-media-controls {
   display:none !important;
-} */
-/* New shadow dom for play button */
-
-/* This one works! */
+}
 
 *::-webkit-media-controls-start-playback-button {
   display: none!important;
