--- a/css/styles.css
+++ b/css/styles.css
@@ -291,7 +291,7 @@ i.icon-24-scan {
 /* This used to work for the parent element of button divs */
 /* But it does not work with newer browsers, the below doesn't hide the play button parent div */
 
-/* *::-webkit-media-controls-panel {
+ *::-webkit-media-controls-panel {
   display: none!important;
   -webkit-appearance: none;
 }
