--- a/css/styles.css
+++ b/css/styles.css
@@ -310,15 +310,12 @@ i.icon-24-scan {
   display: none!important;
   -webkit-appearance: none;
 }
-
-/* @media all and (orientation: portrait) and (max-width: 603px) {
-  #interactive {
-    transform: rotate(-90deg);
-    transform-origin: left top;
-    width: 100vh;
-    overflow-x: hidden;
-    position: absolute;
-    top: 100%;
-    left: 0;
-  }
-} */
+/*меняем отдельный элемент */
+:-webkit-full-screen img {
+  width: 100%;
+  height: 100%;
+}
+:-moz-full-screen img {
+  width: 100%;
+  height: 100%;
+}
