--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-video {
+#interactive.viewport{
   position: fixed;
   top: 0;
   left: 0;
@@ -8,6 +8,10 @@ video {
   height: 100%;
   z-index: 100;
   transform-origin: center center;
+}
+video {
+  width: 100%;
+  height: 100%;
 }
  *::-webkit-media-controls-panel {
   display: none!important;
