--- a/quagga.css
+++ b/quagga.css
@@ -9,6 +9,13 @@
   z-index: 100;
   transform-origin: center center;
 }
+.drawingBuffer{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 video {
   width: 100%;
   height: 100%;
